// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker only with required props renders successfully if invisible: DateTimePicker if invisible. 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="pressableContainer"
>
  <View
    pointerEvents="box-only"
  >
    <TextInput
      editable={false}
      testID="textInput"
    />
  </View>
</View>
`;

exports[`DateTimePicker only with required props renders successfully if visible: DateTimePicker if visible. 1`] = `
Array [
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 0,
          "display": "flex",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.4)",
            "flex": 1,
          }
        }
        testID="pickerBackdrop"
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {},
            }
          }
          collapsable={false}
          entering={
            SlideInDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          exiting={
            SlideOutDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          pointerEvents="box-none"
          style={
            Object {
              "backgroundColor": "white",
            }
          }
          testID="pickerContainer"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingHorizontal": 10,
                "paddingVertical": 8,
              }
            }
            testID="pickerAccessory"
          />
          <View
            testID="pickerItemsContainer"
          >
            <RNDateTimePicker
              date={1653868800000}
              displayIOS="spinner"
              enabled={true}
              mode="date"
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": 216,
                }
              }
              testID="pickerItems"
            />
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="pressableContainer"
  >
    <View
      pointerEvents="box-only"
    >
      <TextInput
        editable={false}
        testID="textInput"
        value="2022-05-30T00:00:00.000Z"
      />
    </View>
  </View>,
]
`;

exports[`DateTimePicker with all props should be applied all properly with custom xxx component: DateTimePicker all properly with custom xxx component. 1`] = `
Array [
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="modal"
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 0,
          "display": "flex",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        style={
          Object {
            "backgroundColor": "green",
            "borderColor": "red",
            "flex": 1,
          }
        }
        testID="pickerBackdrop"
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {},
            }
          }
          collapsable={false}
          entering={
            SlideInDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          exiting={
            SlideOutDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          pointerEvents="box-none"
          style={
            Object {
              "backgroundColor": "yellow",
              "borderColor": "black",
            }
          }
          testID="pickerContainer"
        >
          <View
            testID="customPickerAccessory"
          />
          <View
            pointerEvents="none"
            testID="pickerItemsContainer"
          >
            <View
              testID="customPicker"
            />
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="pressableContainer"
  >
    <View
      pointerEvents="box-only"
    >
      <View
        testID="customTextInput"
      />
    </View>
  </View>,
]
`;

exports[`DateTimePicker with all props should be applied all properly with default xxx component: DateTimePicker all properly with default xxx component. 1`] = `
Array [
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    statusBarTranslucent={true}
    testID="modal"
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 0,
          "display": "flex",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "callbackV": [Function],
            "durationV": 500,
            "randomizeDelay": false,
          }
        }
        style={
          Object {
            "backgroundColor": "green",
            "borderColor": "red",
            "flex": 1,
          }
        }
        testID="pickerBackdrop"
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {},
          }
        }
        collapsable={false}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {},
            }
          }
          collapsable={false}
          entering={
            SlideInDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          exiting={
            SlideOutDown {
              "build": [Function],
              "callbackV": [Function],
              "durationV": 500,
              "randomizeDelay": false,
            }
          }
          pointerEvents="box-none"
          style={
            Object {
              "backgroundColor": "yellow",
              "borderColor": "black",
            }
          }
          testID="pickerContainer"
        >
          <View
            style={
              Object {
                "backgroundColor": "blue",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingHorizontal": 10,
                "paddingVertical": 8,
              }
            }
            testID="pickerAccessory"
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="deleteLink"
            >
              <Text
                style={
                  Object {
                    "color": "#d9545e",
                    "fontWeight": "bold",
                    "paddingHorizontal": 10,
                  }
                }
              >
                delete
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="cancelLink"
            >
              <Text
                style={
                  Object {
                    "color": "#4577CC",
                    "fontWeight": "bold",
                    "paddingHorizontal": 10,
                  }
                }
              >
                cancel
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="doneLink"
            >
              <Text
                style={
                  Object {
                    "color": "#4577CC",
                    "fontWeight": "bold",
                    "paddingHorizontal": 10,
                  }
                }
              >
                done
              </Text>
            </View>
          </View>
          <View
            pointerEvents="none"
            testID="pickerItemsContainer"
          >
            <RNDateTimePicker
              date={1640995200000}
              displayIOS="spinner"
              enabled={true}
              maximumDate={1653955200000}
              minimumDate={1483228800000}
              mode="date"
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "height": 216,
                  },
                  Object {
                    "backgroundColor": "yellow",
                  },
                ]
              }
              testID="pickerItems"
            />
          </View>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="pressableContainer"
  >
    <View
      pointerEvents="box-only"
    >
      <TextInput
        editable={false}
        placeholder="please select..."
        style={
          Object {
            "color": "red",
          }
        }
        testID="textInput"
      />
    </View>
  </View>,
]
`;
